--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -107,6 +107,10 @@
 .logo {
   position: relative;
 }
+.footer {
+
+}
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
