--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -119,6 +119,11 @@
   height: auto;
 }
 
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
