--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 6rem 3rem 6rem 6rem;
 }
 
 .main {
@@ -16,8 +16,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  padding: 6rem 3rem 6rem 6rem;
+  min-height: 100%;
 }
 
 .description {
