--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem 3rem 6rem 6rem;
+  padding: 10px;
 }
 
 .main {
@@ -16,7 +16,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem 3rem 6rem 6rem;
+  padding: 10px;
   min-height: 100%;
 }
 
