--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+}
+
+.description {
+  padding: 0 20px;
 }
 
 .main {
@@ -16,7 +19,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 2rem;
   min-height: 100%;
 }
 
