--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 4fr;
+  min-height: 100%;
 }
 
 .navi {
@@ -11,7 +12,7 @@
 }
 
 .description {
-  padding: 0 20px;
+  padding: 0 60px;
 }
 
 .main {
