--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  height: 100%;
+  min-height: 100%;
 }
 
 .navi {
@@ -20,7 +20,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 3rem;
+  padding: 1rem;
   min-height: 100%;
 }
 
@@ -164,6 +164,14 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100%;
+  }
+
   .content {
     padding: 4rem;
   }
