--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100%;
+  height: 100vh;
 }
 
 .description {
@@ -149,8 +149,16 @@
     min-height: 100%;
   }
 
-  .content {
-    padding: 4rem;
+  .navi {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact {
+    display: flex;
+    justify-content: space-between;
+    margin-top: auto;
   }
 
   .grid {
