--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100%;
+  height: 100vh;
 }
 
 .description {
@@ -109,7 +109,6 @@
 .contact {
   display: flex;
   justify-content: space-between;
-  top: 150px;
   position: sticky;
 }
 
