--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,7 +7,8 @@
 .navi {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  justify-content: space-between;
+  align-items: center;
   height: 100vh;
 }
 
