--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,7 +7,7 @@
 .navi {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
 }
@@ -110,6 +110,7 @@
 .contact {
   display: flex;
   justify-content: space-between;
+  top: 150px;
   position: sticky;
 }
 
