--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,9 +7,7 @@
 .navi {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .description {
@@ -110,8 +108,7 @@
 .contact {
   display: flex;
   justify-content: space-between;
-  top: 150px;
-  position: sticky;
+  margin-top: auto
 }
 
 .footertext {
