--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .description {
@@ -101,7 +101,7 @@
   margin: 30px;
 }
 
-.img {
+img {
   width: 100px;
   height: auto;
 }
