--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
+}
+
+.name {
+  padding: 0 30px;
 }
 
 .description {
@@ -134,7 +138,6 @@
   .wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     min-height: 100%;
   }
