--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,6 +7,7 @@
 .navi {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   height: 100vh;
 }
