--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -12,6 +12,12 @@
   height: 100vh;
 }
 
+.naviContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .name {
   padding: 0 30px;
 }
