--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -125,13 +125,15 @@
   height: 100vh;
 }
 
-.title {
-  font-size: large;
-}
-
 .post {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.date {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
