--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,6 +100,10 @@ a {
   text-decoration: none;
 }
 
+img {
+  border-radius: 30px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
