--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,6 +105,14 @@ img {
   max-width: 600px;
 }
 
+/* Mobile */
+@media (max-width: 700px) {
+  img {
+    border-radius: 18px;
+    max-width: 300px;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
