--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,7 +10,8 @@
   justify-content: space-between;
   align-items: center;
   min-height: 100%;
-  position: fixed;
+  position: -webkit-sticky;/*Safari*/
+	position: sticky;
   left: 0;
 }
 
