--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -9,7 +9,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  min-height: 100%;
+  height: 100vh;
+  position: sticky;
+	top: 0;
 }
 
 .naviContent {
