--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,9 +7,7 @@
 .navi {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  height: 100vh;
   position: sticky;
 	top: 0;
 }
@@ -165,6 +163,7 @@
     flex-direction: column;
     align-items: center;
     min-height: 100%;
+    position: none;
   }
 
   .navi {
