--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100%;
+  height: 100vh;
   position: sticky;
 	top: 0;
 }
