--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -171,6 +171,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: auto;
+    position: none;
+	  top: none;
   }
 
   .contact {
