--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -164,7 +164,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100%;
+    min-height: 100vh;
+    position: none;
+	  top: none;
   }
 
   .navi {
