--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -172,8 +172,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: none;
-	  top: none;
+    position: relative;
   }
 
   .contact {
