--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -165,15 +165,13 @@
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    overflow: hidden;
   }
 
   .navi {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    height: auto;
+    position: absolute;
   }
 
   .contact {
