--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -171,7 +171,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
+    position: initial;
   }
 
   .contact {
