--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -26,6 +26,7 @@
 
 .description {
   padding: 20px 30px;
+  text-align: center;
 }
 
 .main {
@@ -172,6 +173,7 @@
     flex-direction: column;
     align-items: center;
     position: initial;
+    top: initial;
   }
 
   .contact {
