--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -164,12 +164,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
   }
 
   .navi {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: initial;
   }
 
