--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -164,7 +164,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    height: auto;
   }
 
   .navi {
@@ -173,6 +173,7 @@
     align-items: center;
     justify-content: center;
     position: initial;
+    height: auto;
   }
 
   .contact {
