--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
   justify-content: space-between;
   position: sticky;
 }
@@ -164,16 +163,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: auto;
+    min-height: 100vh;
   }
 
   .navi {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     position: initial;
-    height: auto;
   }
 
   .contact {
